[gd_scene load_steps=4 format=3 uid="uid://chutr6l0yecw4"]

[ext_resource type="Script" path="res://scenes/menus/expand_menu.gd" id="1_041po"]
[ext_resource type="Texture2D" uid="uid://ckaoxt7bilkcr" path="res://assets/textures/1x1.png" id="2_sxa8v"]
[ext_resource type="Texture2D" uid="uid://uibvlcal4fy0" path="res://assets/textures/potion/potion_oil.png" id="3_eb0iq"]

[node name="ExpandMenu" type="Control"]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 481.0
offset_top = -40.0
offset_right = 521.0
grow_vertical = 0
script = ExtResource("1_041po")

[node name="ExpandButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -60.0
offset_top = -125.0
offset_right = 60.0
offset_bottom = -75.0
grow_horizontal = 2
text = "Expand"

[node name="Dropdown" type="Control" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -60.0
offset_top = -501.0
offset_right = 60.0
offset_bottom = -126.0
grow_horizontal = 2

[node name="TextureRect" type="TextureRect" parent="Dropdown"]
modulate = Color(0, 0, 0, 0.411765)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.96, 1)
texture = ExtResource("2_sxa8v")

[node name="HideButton" type="Button" parent="Dropdown"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -60.0
offset_top = 1.0
offset_right = 60.0
offset_bottom = 51.0
grow_horizontal = 2
grow_vertical = 0
text = "Hide"

[node name="Label1" type="Label" parent="Dropdown"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 135.0
offset_top = -160.5
offset_right = 224.0
offset_bottom = -115.5
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Life"
vertical_alignment = 1

[node name="Label2" type="Label" parent="Dropdown"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 135.0
offset_top = -69.5
offset_right = 224.0
offset_bottom = -24.5
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Stone"
vertical_alignment = 1

[node name="Label3" type="Label" parent="Dropdown"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 135.0
offset_top = 21.5
offset_right = 224.0
offset_bottom = 66.5
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Crystal"
vertical_alignment = 1

[node name="Label4" type="Label" parent="Dropdown"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 135.0
offset_top = 112.5
offset_right = 224.0
offset_bottom = 157.5
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Oil"
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Dropdown"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.02
anchor_right = 0.9
anchor_bottom = 0.98
grow_horizontal = 2
grow_vertical = 2

[node name="Button1" type="TextureButton" parent="Dropdown/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
ignore_texture_size = true
stretch_mode = 5

[node name="Background" type="TextureRect" parent="Dropdown/VBoxContainer/Button1"]
modulate = Color(0.162066, 0.162066, 0.162066, 1)
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_sxa8v")

[node name="Count1" type="Label" parent="Dropdown/VBoxContainer/Button1"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -4.5
offset_right = -4.0
offset_bottom = -4.5
grow_horizontal = 2
grow_vertical = 2
text = "0"
horizontal_alignment = 2
vertical_alignment = 2

[node name="Button2" type="TextureButton" parent="Dropdown/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
ignore_texture_size = true
stretch_mode = 5

[node name="Background2" type="TextureRect" parent="Dropdown/VBoxContainer/Button2"]
modulate = Color(0.162066, 0.162066, 0.162066, 1)
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_sxa8v")

[node name="Count2" type="Label" parent="Dropdown/VBoxContainer/Button2"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -4.5
offset_right = -4.0
offset_bottom = -4.5
grow_horizontal = 2
grow_vertical = 2
text = "0"
horizontal_alignment = 2
vertical_alignment = 2

[node name="Button3" type="TextureButton" parent="Dropdown/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
ignore_texture_size = true
stretch_mode = 5

[node name="Background3" type="TextureRect" parent="Dropdown/VBoxContainer/Button3"]
modulate = Color(0.162066, 0.162066, 0.162066, 1)
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_sxa8v")

[node name="Count3" type="Label" parent="Dropdown/VBoxContainer/Button3"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -4.5
offset_right = -4.0
offset_bottom = -4.5
grow_horizontal = 2
grow_vertical = 2
text = "0"
horizontal_alignment = 2
vertical_alignment = 2

[node name="Button4" type="TextureButton" parent="Dropdown/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("3_eb0iq")
ignore_texture_size = true
stretch_mode = 5

[node name="Background4" type="TextureRect" parent="Dropdown/VBoxContainer/Button4"]
modulate = Color(0.162066, 0.162066, 0.162066, 1)
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_sxa8v")

[node name="Count4" type="Label" parent="Dropdown/VBoxContainer/Button4"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -4.5
offset_right = -4.0
offset_bottom = -4.5
grow_horizontal = 2
grow_vertical = 2
text = "0"
horizontal_alignment = 2
vertical_alignment = 2

[connection signal="pressed" from="ExpandButton" to="." method="_on_expand_button_pressed"]
[connection signal="pressed" from="Dropdown/HideButton" to="." method="_on_hide_button_pressed"]
[connection signal="pressed" from="Dropdown/VBoxContainer/Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="Dropdown/VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Dropdown/VBoxContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Dropdown/VBoxContainer/Button4" to="." method="_on_button_4_pressed"]
